Name:                htelehash
Version:             0.0.1
Synopsis:            TeleHash in Haskell
Description:         Implements TeleHash protocol from http://TeleHash.org
Homepage:            https://github.com/alanz/htelehash
License:             BSD3
License-file:        LICENSE
Author:              Alan Zimmerman
Maintainer:          alan.zimm@gmail.com
Copyright:           (c) 2011 Alan Zimmerman
Category:            Network
Build-type:          Simple
homepage:            http://github.com/alanz/htelehash
bug-reports:         http://github.com/alanz/htelehash/issues
Extra-source-files:  README
                     .ghci
                     -- buildall.sh

Cabal-version:   >= 1.6


flag buildtests
  description: Build the executable to run unit tests
  default: False

Library
  Build-depends:     base             >= 4       && < 5
                   , array            >= 0.3     && < 0.5
                   , mtl              >= 1.1     && < 2.9
                   , containers       >= 0.2     && < 0.6
                   , Crypto           >= 4.2.3   && < 5.0
                   , bytestring       >= 0.9.1   && < 1.0
                   , attoparsec       >= 0.9.1   && < 1.0
                   , network          >= 2.3.0   && < 2.5
                   , random           >= 1.0     && < 2.0
                   , SHA              >= 1.5.0   && < 1.9
                   , dataenc          >= 0.14    && < 0.15
                   , old-time         >= 1.0     && < 2.0
                   , MissingH         >= 1.1     && < 1.3
                   , transformers     >= 0.2.2   && < 0.4
                   , json             >= 0.5     && < 1
                   , hslogger         >= 1.1.5   && < 2
                   , yesod            >= 0.9.3   && < 1.5
                   , syb              >= 0.3.3   && < 0.5
                   , crypto-random
                   , crypto-pubkey
                   , crypto-pubkey-types
                   , crypto-numbers
                   , cryptohash
                   , base16-bytestring
                   , base64-bytestring
                   -- , utf8-string
                   , aeson
                   , iproute
                   , binary
                   , cipher-aes
                   -- , byteable
                   , bytestring
                   , unordered-containers
                   , text
                   , scientific
                   -- , tls
                   , vector
                   -- , mvc
                   , murmurhash3

  hs-source-dirs: src
  Buildable: False
  Exposed-modules:
                       Network.TeleHash.Bucket
                       Network.TeleHash.Convert
                       Network.TeleHash.Crypt
                       Network.TeleHash.Crypto1a
                       Network.TeleHash.Ext.Chat
                       Network.TeleHash.Ext.Connect
                       Network.TeleHash.Ext.Link
                       Network.TeleHash.Ext.Path
                       Network.TeleHash.Ext.Peer
                       Network.TeleHash.Ext.Seek
                       Network.TeleHash.Ext.Thtp
                       Network.TeleHash.Hn
                       Network.TeleHash.Packet
                       Network.TeleHash.Path
                       Network.TeleHash.Paths
                       Network.TeleHash.Switch
                       Network.TeleHash.SwitchApi
                       Network.TeleHash.Types
                       Network.TeleHash.Utils

  --ghc-options:         -Wall
  ghc-options:         -Wall -fhpc


executable             ping
    hs-source-dirs:    . src
    main-is:           pingNew.hs
    ghc-options:  -Wall

executable             seed
    hs-source-dirs:    . src
    main-is:           seed.hs
    ghc-options:  -Wall

executable             tft
    hs-source-dirs:    . src
    main-is:           tft.hs
    ghc-options:  -Wall


-- test-suite             runtests
--     type:
--       exitcode-stdio-1.0

--     cpp-options:   -DTEST
--     build-depends:
--                    QuickCheck >= 2 && < 3,
--                    HUnit,
--                    test-framework-quickcheck2,
--                    -- test-framework-quickcheck,
--                    test-framework-hunit,
--                    test-framework,
--                    test-framework-th
--                    , knob
--         -- hs-source-dirs: . src ./dist/build
--     hs-source-dirs: . src
--     main-is:         runtests.hs
--     ghc-options:  -fhpc

source-repository head
  type:     git
  location: git://github.com/alanz/htelehash.git
