Name:                htelehash
Version:             0.0.1
Synopsis:            TeleHash in Haskell
Description:         Implements TeleHash protocol from http://TeleHash.org
Homepage:            https://github.com/alanz/htelehash
License:             BSD3
License-file:        LICENSE
Author:              Alan Zimmerman
Maintainer:          alan.zimm@gmail.com
Copyright:           (c) 2011 Alan Zimmerman
Category:            Network
Build-type:          Simple
homepage:            http://github.com/alanz/htelehash
bug-reports:         http://github.com/alanz/htelehash/issues
Extra-source-files:  README
                     .ghci
                     -- buildall.sh

Cabal-version:   >= 1.10


Library
  Build-depends:    base             >= 4       && < 5
                  , aeson
                  , base16-bytestring
                  , base64-bytestring
                  , binary
                  , bytestring
                  , cipher-aes
                  , containers
                  , crypto-numbers
                  , crypto-pubkey
                  , crypto-pubkey-types
                  , crypto-random
                  , cryptohash
                  , hslogger
                  , iproute
                  , mtl
                  , network
                  , old-time
                  , old-locale
                  , split
                  , text
                  , unordered-containers

  hs-source-dirs: src
  -- Buildable: False
  Exposed-modules:
                       Network.TeleHash.Bucket
                       Network.TeleHash.Convert
                       Network.TeleHash.Crypt
                       Network.TeleHash.Crypto1a
                       Network.TeleHash.Dht
                       Network.TeleHash.Ext.Chat
                       Network.TeleHash.Ext.Connect
                       Network.TeleHash.Ext.Link
                       Network.TeleHash.Ext.Path
                       Network.TeleHash.Ext.Peer
                       Network.TeleHash.Ext.Seek
                       Network.TeleHash.Ext.Thtp
                       Network.TeleHash.Hn
                       Network.TeleHash.Packet
                       Network.TeleHash.Path
                       Network.TeleHash.Paths
                       Network.TeleHash.Periodic
                       Network.TeleHash.Switch
                       Network.TeleHash.SwitchApi
                       Network.TeleHash.Types
                       Network.TeleHash.Utils

  default-language: Haskell2010
  --ghc-options:         -Wall
  ghc-options:         -Wall -fhpc


executable             seed
  hs-source-dirs:    . src
  main-is:           seed.hs
  default-language: Haskell2010
  ghc-options:  -Wall
  build-depends:    base
                  , aeson
                  , base16-bytestring
                  , base64-bytestring
                  , binary
                  , bytestring
                  , cipher-aes
                  , containers
                  , crypto-numbers
                  , crypto-pubkey
                  , crypto-pubkey-types
                  , crypto-random
                  , cryptohash
                  , hslogger
                  , iproute
                  , mtl
                  , network
                  , old-time
                  , old-locale
                  , split
                  , text
                  , unordered-containers

executable             tft
  hs-source-dirs:    . src
  main-is:           tft.hs
  default-language: Haskell2010
  ghc-options:  -Wall
  build-depends:    base
                  , aeson
                  , base16-bytestring
                  , base64-bytestring
                  , binary
                  , bytestring
                  , cipher-aes
                  , containers
                  , crypto-numbers
                  , crypto-pubkey
                  , crypto-pubkey-types
                  , crypto-random
                  , cryptohash
                  , hslogger
                  , iproute
                  , mtl
                  , network
                  , old-time
                  , old-locale
                  , split
                  , text
                  , unordered-containers
                  -- , ekg


executable             ping
  hs-source-dirs:    . src
  main-is:           ping.hs
  default-language: Haskell2010
  ghc-options:  -Wall
  build-depends:    base
                  , aeson
                  , base16-bytestring
                  , base64-bytestring
                  , binary
                  , bytestring
                  , cipher-aes
                  , containers
                  , crypto-numbers
                  , crypto-pubkey
                  , crypto-pubkey-types
                  , crypto-random
                  , cryptohash
                  , hslogger
                  , iproute
                  , mtl
                  , network
                  , old-time
                  , old-locale
                  , text
                  , unordered-containers

test-suite doctests
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs:   test
  ghc-options:      -threaded -Wall
  main-is:          doctests.hs
  build-depends:    base
                  , doctest >= 0.9.3
                  , ghc-mod >= 4.1

test-suite tests
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs:   src test
  ghc-options:      -threaded -Wall
  main-is:          tests.hs
  build-depends:    base
                  , tasty
                  -- , tasty-hspec
                  , tasty-golden
                  , tasty-hunit
                  , tasty-smallcheck

                  , aeson
                  , base16-bytestring
                  , base64-bytestring
                  , binary
                  , bytestring
                  , cipher-aes
                  , containers
                  , crypto-numbers
                  , crypto-pubkey
                  , crypto-pubkey-types
                  , crypto-random
                  , cryptohash
                  , hslogger
                  , iproute
                  , mtl
                  , network
                  , old-time
                  , old-locale
                  , split
                  , text
                  , unordered-containers


source-repository head
  type:     git
  location: git://github.com/alanz/htelehash.git
